# Auto-Dashboard

./: .gitignore  Makefile  README.md
.github/workflows/: deploy-etl.yml  etl-ci.yml  etl-daily.yml  frontend-ci.yml
db/: 001_schema.sql  002_seed_dimensions_v2.sql  003_seed_asp.sql  004_monitoring_views.sql
docs/: architecture.md
etl/: .env.example  .gitignore  Dockerfile  README.md  crontab  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt
etl/autoquant_etl/: __init__.py  __main__.py  backfill.py  config.py  monitor.py  orchestrator.py
etl/autoquant_etl/connectors/: __init__.py  base.py  fada.py  vahan.py
etl/autoquant_etl/transforms/: __init__.py  asp_manager.py  daily_delta.py  gold.py  loader.py  normalize.py  reconcile.py
etl/autoquant_etl/utils/: __init__.py  alerts.py  database.py  fy_calendar.py  logging.py  migrations.py  seeder.py
etl/autoquant_etl/validators/: __init__.py  gate.py
etl/seeds/: fuel_to_powertrain.csv  maker_to_listed_entity_v2.csv  segment_asp_assumptions.csv  vehicle_class_to_segment.csv
etl/tests/: conftest.py  test_backfill.py  test_fy_calendar.py  test_gate.py  test_monitor.py
frontend/: .env.example  README.md  next.config.js  package.json  tailwind.config.js  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/revenue/: page.tsx
frontend/src/lib/: format.ts  queries.ts  supabase-server.ts  supabase.ts
frontend/src/types/: index.ts
(+22 files in other folders)
